# clipper

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/clipper/: __init__.py  clipboard.py  engine.py
src/clipper/mappings/: __init__.py  layouts.py
src/clipper/processors/: __init__.py  base.py  layout_converter.py  layout_detector.py
tests/: __init__.py  test_clipboard.py  test_engine.py  test_main.py
tests/processors/: __init__.py  test_layout_converter.py  test_layout_detector.py
