[project]
name = "clipper"
version = "0.1.0"
description = "Clipboard tools"
readme = "README.md"
authors = [
    { name = "ayasyrev", email = "a.yasyrev@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pyperclip>=1.8.2",
]

[project.scripts]
clipper = "clipper:main"

[build-system]
requires = ["uv_build>=0.8.8,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "black[jupyter]>=25.1.0",
    "coverage[toml]>=7.10.3",
    "flake8>=7.3.0",
    "isort>=6.0.1",
    "mypy>=1.17.1",
    "nbmetaclean>=0.1.4",
    "nox>=2025.5.1",
    "pre-commit>=4.3.0",
    "ruff>=0.12.8",
]
test = [
    "pytest>=8.4.1",
]
